--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.3
+  json_annotation: ^4.8.1
+  dio: ^5.2.1+1
+  shared_preferences: ^2.1.2
+  bloc_test: ^9.1.3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,6 +45,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.7.0
+  build_runner: ^2.4.5
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
