--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   dio: ^5.2.1+1
   shared_preferences: ^2.1.2
   bloc_test: ^9.1.3
+  cached_network_image: ^3.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
